@@ -72,6 +72,7 @@
 #include "lyricspage.h"
 #include "infopage.h"
 #include "gtkstyle.h"
+#include "gtkproxystyle.h"
 #ifdef ENABLE_DEVICES_SUPPORT
 #include "filejob.h"
 #include "devicespage.h"
@@ -231,6 +232,9 @@ MainWindow::MainWindow(QWidget *parent)
     GtkStyle::applyTheme(toolbar);
     Icons::initToolbarIcons(artistLabel->palette().color(QPalette::Foreground));
     menuButton->setIcon(Icons::toolbarMenuIcon);
+    if (GtkStyle::isActive()) {
+        setStyle(new GtkProxyStyle());
+    }
 
     #ifdef ENABLE_KDE_SUPPORT
     prefAction=static_cast<Action *>(KStandardAction::preferences(this, SLOT(showPreferencesDialog()), ActionCollection::get()));
